# cardinal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
archive/poc-v0.1/: README.md  pyproject.toml
archive/poc-v0.1/cli/: main.py
archive/poc-v0.1/engine/: __init__.py  schemas.py  telemetry.py
archive/poc-v0.1/engine/actions/: actions.py
archive/poc-v0.1/engine/canon/: guard.py
archive/poc-v0.1/engine/core/: clock.py  loop.py  rng.py
archive/poc-v0.1/engine/memory/: npc_memory.py
archive/poc-v0.1/engine/narrator/: base.py  llm_narrator.py  plain_narrator.py
archive/poc-v0.1/engine/persistence/: saves.py
archive/poc-v0.1/engine/systems/: __init__.py  combat.py  factions.py  interact.py  quests.py  skills.py
archive/poc-v0.1/tests/: conftest.py  test_canon.py  test_clock.py  test_economy.py  test_founding_and_info.py  test_loop.py  test_npc.py  test_quest_takers.py
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/: world.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/devices/: devices.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/economy/: markets.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/floors/: watson.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/locations/: afterlife.yaml  kabuki_market.yaml  totentanz.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/monsters/: scav.yaml  wisp_ice.yaml
archive/poc-v0.1/tests/fixtures/probe_cyberpunk/npcs/: agents.yaml
archive/poc-v0.1/tests/fixtures/probe_destiny/economy/: markets.yaml
archive/poc-v0.1/tests/fixtures/probe_destiny/factions/: factions.yaml
archive/poc-v0.1/tests/fixtures/probe_destiny/items/: items.yaml
archive/poc-v0.1/tests/fixtures/probe_destiny/monsters/: dreg.yaml
archive/poc-v0.1/tests/fixtures/probe_wow/: rules.yaml
archive/poc-v0.1/tests/fixtures/probe_wow/items/: items.yaml
archive/poc-v0.1/tests/fixtures/probe_wow/locations/: goldshire.yaml
archive/poc-v0.1/tests/fixtures/probe_wow/monsters/: murloc.yaml
archive/poc-v0.1/tests/fixtures/testworld/: rules.yaml
archive/poc-v0.1/tests/fixtures/testworld/economy/: markets.yaml
archive/poc-v0.1/tests/fixtures/testworld/items/: items.yaml
archive/poc-v0.1/tests/fixtures/testworld/locations/: tw_hub.yaml  tw_village.yaml
archive/poc-v0.1/tests/fixtures/testworld/modifiers/: modifiers.yaml
archive/poc-v0.1/tests/fixtures/testworld/npcs/named/: npcs.yaml
archive/poc-v0.1/tests/fixtures/testworld/skills/: skills.yaml
archive/poc-v0.1/tools/: gen_stress_agents.py
archive/poc-v0.1/worlds/aincrad/: rules.yaml  world.yaml
archive/poc-v0.1/worlds/aincrad/canon/: inferences.yaml
archive/poc-v0.1/worlds/aincrad/economy/: markets.yaml
archive/poc-v0.1/worlds/aincrad/factions/: aincrad_liberation_front.yaml  divine_knights_alliance.yaml
archive/poc-v0.1/worlds/aincrad/floors/: floor_001.yaml  floor_002.yaml
archive/poc-v0.1/worlds/aincrad/items/: antidote_crystal.yaml  boar_meat.yaml  boar_tusk.yaml  bread.yaml  iron_ingot.yaml  medicinal_herb_leaf.yaml  small_sword.yaml  starter_clothes.yaml  wolf_pelt.yaml  wooden_arrow.yaml
archive/poc-v0.1/worlds/aincrad/locations/: f1_labyrinth.yaml  horunka.yaml  tob_inn.yaml  tolbana.yaml  town_of_beginnings.yaml
archive/poc-v0.1/worlds/aincrad/lore/: floor_1_overview.md
archive/poc-v0.1/worlds/aincrad/modifiers/: alf_emblem.yaml  paralysis_venom.yaml
archive/poc-v0.1/worlds/aincrad/monsters/: dire_wolf.yaml  frenzy_boar.yaml  little_nepenthes.yaml
archive/poc-v0.1/worlds/aincrad/npcs/archetypes/: guild_leader.yaml  information_broker.yaml  villager.yaml
archive/poc-v0.1/worlds/aincrad/npcs/named/: argo.yaml  horunka_mother.yaml  horunka_residents.yaml  thinker.yaml  tob_residents.yaml
archive/poc-v0.1/worlds/aincrad/quests/: secret_medicine_of_the_forest.yaml
archive/poc-v0.1/worlds/aincrad/resources/: medicinal_herb.yaml
archive/poc-v0.1/worlds/aincrad/skills/: acrobatics.yaml  blade_throwing.yaml  improvised_archery.yaml  swordskill_horizontal.yaml  swordskill_slant.yaml  tech_throw_pick.yaml
archive/poc-v0.1/worlds/aincrad/vehicles/: trade_wagon.yaml
cli/: main.py
docs/archive/: CARDINAL_DESIGN_SPEC.md
docs/design-spec/: 01_Why_Cardinal_Exists.md  02_The_Ontology_of_a_Cardinal_World.md  README.md  ROADMAP.md
domains/: README.md
domains/conflict/: Cargo.toml  README.md
domains/culture/: Cargo.toml  README.md
domains/ecology/: Cargo.toml  README.md
domains/economy/: Cargo.toml  README.md
domains/living/: Cargo.toml  README.md
domains/living/src/: composition.rs  lib.rs  schema.rs  systems.rs
domains/living/tests/: thermoregulation.rs
domains/physical/: Cargo.toml  README.md
domains/physical/src/: composition.rs  lib.rs  materials.rs  schema.rs  space.rs  systems.rs
domains/physical/tests/: adjacency.rs  environment.rs  environment_tick.rs  exposure.rs  multi_region.rs  portal_danger.rs  portals.rs  position.rs  thermal_mass.rs  wind.rs
engine/: schemas.py
frontends/: README.md
frontends/cli/: Cargo.toml  README.md
frontends/cli/src/: main.rs
frontends/narrator/: Cargo.toml  README.md
frontends/narrator/src/: lib.rs
frontends/tools/: Cargo.toml  README.md
frontends/tools/src/: lib.rs
kernel/: Cargo.toml  README.md
kernel/src/: domain.rs  events.rs  fact.rs  hash.rs  hierarchy.rs  identity.rs  lib.rs  proposal.rs  rng.rs  scheduler.rs  store.rs  system.rs  tick.rs  value.rs
kernel/tests/: cardinality.rs  determinism.rs  hermeticity.rs
services/: README.md
services/observe/: Cargo.toml  README.md
services/observe/src/: lib.rs
services/persistence/: Cargo.toml  README.md
services/persistence/src/: lib.rs
services/replay/: Cargo.toml  README.md
services/replay/src/: lib.rs
tests/: README.md  test_agents.py  test_combat.py  test_ecology_agents.py  test_economy.py  test_factions.py  test_interact_vehicles.py  test_m5.py  test_m6.py  test_persistence.py  test_player_vs_agents.py  test_probes.py  test_registry.py
tools/: gen_stress_agents.py
worlds/: README.md  cavern.world  house.world  manor.world  menagerie.world  wilderness.world
(+144 files in other folders)
