[package]
name = "physical"
description = "Physical Reality domain (Vol. III Ch. 1): space, topology, regions, containment, materials, environment."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

# LAW (Vol. V Ch. 1 §1.1, rule 2): a domain depends on `kernel` ONLY. Adding any other
# domain here is an architectural-law violation -- cross-domain effect goes through
# committed proposals and events (Vol. III Ch. 12 §12.1), never a direct dependency.
[dependencies]
kernel.workspace = true
