[package]
name = "observe"
description = "Read-only observation plane: entitled streams, meters, causal-debugger surface (Vol. V Ch. 6 & 8)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kernel.workspace = true
