[package]
name = "persistence"
description = "Persistence service: chronicle tail + snapshots, two-road recovery (Vol. V Ch. 7)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kernel.workspace = true
