[package]
name = "replay"
description = "Deterministic replay and time-travel tooling (Vol. V Ch. 8)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kernel.workspace = true
